compiler/tests/run-pass/conditionals.arret
(import [stdlib base])
(import [stdlib test])

(defn pos-neg-or-zero ([n Int]) -> (U 'positive 'negative 'zero)
  (cond
    (< n 0) 'negative
    (> n 0) 'positive
    :else 'zero))

(defn test-cond! () ->! ()
  (assert-eq! 'positive (pos-neg-or-zero 5))
  (assert-eq! 'negative (pos-neg-or-zero -1))
  (assert-eq! 'zero (pos-neg-or-zero 0))

  (assert-eq! () (cond)))

(defn main! () ->! ()
  (test-cond!))